2018-12-03
    * Release 0.7.1

2018-12-01
    * Fixed ticket #51: ignored note highlight color

2018-11-26
    * Updated translatioons from Transifex

2018-11-25
    * Fixed cmake buildsystem

2018-11-20
    * Bundle metadata for the cmake buildsystem

2018-11-20 
    * Fixed ticket #50: version numbers missing on macOS

2018-04-28 
    * fixed ticket #49: wrong placed menus on macOS

2018-04-02
    * release 0.7.0

2017-08-15
    * Splash screen
    
2016-10-23
    * fix for ticket #37 Duplicate midi events on touch screen 

2016-10-20
    * Add Generic Name & Keywords entry to desktop file. Patch by Ross Gammon

2016-10-15
    * RFE #50: Assigning a keyboard shortcut to the button extra controls

2016-10-01
    * settings for the new backends: Mac DLS Synth and Sonivox EAS
    * required: drumstick-1.1

2015-12-29
    * release 0.6.2

2015-09-12
    * Fixed crash on exit (ticket #28)

2015-08-20
    * release 0.6.1

2015-08-17
    * Color palette management fixes for translation and edition
    * Translations updated, re-added Russian translation and resources

2015-08-16
    * Fix for save ins file dialog, like ticket #27
    * Install new Serbian translated files

2015-08-15
    * Fixes for tickets: #27, save keyboard maps with default xml extension
    * and #29, interpret input midi event noteon with velocity=0 like a noteoff

2015-04-12
    *  Serbian localization of VMPK (desktop version) by Jay Alexander Fleming

2014-09-07
    * release 0.6.0

2014-08-31
    * translations updated from transifex.com

2014-08-10
    * settings dialogs for network & fluidsynth drivers

2014-08-07
    * migration to drumstick-rt

2014-06-15
    * Removed styles for rotary knobs
    * Removed option to grab keyboard
    * A few other cleanups

2013-09-04
    * Arbitrary number of keys, instead of whole octaves
    * Arbitrary starting key, instead of C.

2013-09-01
    * MIDI OUT velocity is now independent from the "highlight color tint" setting.

2013-07-30